# Computer-Vision-Course

./: CMakeLists.txt  README.md
coursework/: CMakeLists.txt  src.cpp
prj.labs/: CMakeLists.txt
prj.labs/lab_1/: CMakeLists.txt  lab01.cpp  lab01.report.md.in.txt
prj.labs/lab_2/: CMakeLists.txt  lab02.cpp  lab02.report.md.in.txt
prj.labs/lab_3/: CMakeLists.txt  lab03.cpp  lab03.report.md.in.txt
prj.labs/lab_4/: lab04.cpp  lab04.report.md.in.txt
prj.labs/lab_5/: P_20210410_171334_vHDR_On.json  lab05.cpp  lab05.report.md.in.txt  scan_borders.json
prj.labs/lab_6/: P_20210309_064128_vHDR_Auto.json  P_20210309_064141_vHDR_Auto.json  P_20210410_170813_vHDR_On.json  P_20210410_171055_vHDR_On.json  lab06.cpp  lab06.report.md.in.txt
